--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -34,6 +34,10 @@ ul {
         color: white;
           text-decoration: none;
           margin-left: 2rem;  
+          &:hover {
+      color: $blue;
         }
+        }
+  
     justify-content: flex-end;
 }
