--- a/styles/sass/partials/_contactmediaqueries.scss
+++ b/styles/sass/partials/_contactmediaqueries.scss
@@ -1,80 +1,82 @@
-@media(max-width: 1342px){
-.contactForm { 
+@media (max-width: 1342px) {
+  .contactForm {
     bottom: 11em;
     right: -8em;
     margin: 0 2em;
+  }
 }
-}
-@media(max-width: 1225px){
- .contact-header {
- height: 40vh;
-}
-.left-shadow {
-        box-shadow: -25px 25px $blue;
+@media (max-width: 1225px) {
+  .contact-header {
+    height: 40vh;
+  }
+  .left-shadow {
+    box-shadow: -25px 25px $blue;
+  }
+  .contact-head {
+    h2 {
+      width: 100%;
+      padding-left: 0em;
+      font-size: 60px;
     }
-.contact-head {
-    h2{
-    width: 100%;
-     padding-left: 0em;
-         font-size: 60px;
-    }
-}
-.contactForm { 
+  }
+  .contactForm {
     position: static;
     margin: 1em auto 0;
     background-color: $green;
     .submit {
-        margin-bottom: 1em;
+      margin-bottom: 1em;
     }
-    }
-     .contact-us{
+  }
+  .contact-us {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     padding: 2em 0;
     margin-left: 3em;
     .info {
-        margin-top: 4em;
-        padding-bottom: 0;
+      margin-top: 4em;
+      padding-bottom: 0;
     }
-}
-.contact-us{
+  }
+  .contact-us {
     display: flex;
     margin: 0 auto;
     flex-direction: column-reverse;
+  }
 }
-}
-@media(max-width: 550px){
-            .contact-header {
- height: 30vh;
-}
-    .contact-head {
-    h2{
-    width: 100%;
-     padding-left: 0em;
-         font-size: 50px;
+@media (max-width: 550px) {
+  .contact-header {
+    height: 30vh;
+  }
+  .contact-head {
+    h2 {
+      width: 100%;
+      padding-left: 0em;
+      font-size: 50px;
     }
+  }
+  .left-shadow {
+    box-shadow: 0px 0px $blue;
+  }
 }
-.left-shadow {
-        box-shadow: 0px 0px $blue;
+// Mobile //
+@media (max-width: 400px) {
+  .contact-head {
+    h2 {
+      width: 100%;
+      padding-left: 0em;
+      font-size: 35px;
     }
-}
-@media(max-width: 400px){
-    .contact-head {
-    h2{
-    width: 100%;
-     padding-left: 0em;
-         font-size: 35px;
+  }
+  .contact-form {
+    .email-name {
+      display: flex;
+      flex-direction: column;
+      gap: 0;
     }
-}
-.contact-form {
-.email-name{
-    display: flex;
-    flex-direction: column;
-    gap: 0;
-}
-.form-name, .form-email{
-    margin: 1em 0;
-}
-}
+    .form-name,
+    .form-email {
+      margin: 1em 0;
+    }
+  }
 }
