added changes to form

--- a/styles/sass/partials/_basestyles.scss
+++ b/styles/sass/partials/_basestyles.scss
@@ -4,7 +4,7 @@ $darkblue: #0c1423;
 body {
   max-width: 1500px;
   margin: 0 auto;
-  background-color: $green;
+  background-color: $darkblue;
 }
 .wrapper {
   max-width: 1260px;
