--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -1,129 +1,135 @@
 .blog-header {
-    background-image: url(../assets/blog-header.jpg);
-    position: relative;
-    height: 60vh;
+  background-image: url(../assets/blog-header.jpg);
+  position: relative;
+  height: 60vh;
 }
 .blog-head {
-    h2{
+  h2 {
     display: flex;
     width: 100%;
     flex-direction: row;
-     justify-content: center;
-     padding-top: 1.5em;
-    }
+    justify-content: center;
+    padding-top: 1.5em;
+  }
 }
-.two-col{
-    display: flex;
-    justify-content: space-between;
-    .blog-left-img {
-        margin-top: 3em;
-        position: relative;
-        left: -7.5em;
-        top: .3em;
-    }
-    .blog-right-shadow{
-         box-shadow: 26px 0px $green;
-        }
-    
-    .col-left {
-        flex-basis: 35%;
-        .blog-text{
-           padding: 3em 0 0 1em ;
-             background-color: $green;
-             width: 75%;
-             p {
-                 margin: .5em 0;
-             }
+.two-col {
+  display: flex;
+  justify-content: space-between;
+  .blog-left-img {
+    margin-top: 3em;
+    position: relative;
+    left: -7.5em;
+    top: 0.3em;
+  }
+  .blog-right-shadow {
+    box-shadow: 26px 0px $green;
+  }
 
-        }
-        h4 {
-            color: white;
-             background-color: $green;
-             padding: .3em;
-        }
-        ul {
-            display: flex;
-            flex-direction: column;
-        }
-        li {
-            color: white;
-            font-family: lato;
-            padding: 0;
-            list-style:disc;
-        }
-
-        
+  .col-left {
+    flex-basis: 35%;
+    .blog-text {
+      padding: 3em 0 0 1em;
+      background-color: $green;
+      width: 75%;
+      p {
+        margin: 0.5em 0;
+      }
     }
-    .col-right {
-        flex-basis: 60%;
-        .blog-img-right {
-            position: relative;
-            right: -1.4em;
-            top: -18em; 
-        }
-        .blog-left-shadow {
-              box-shadow: -27px 27px $blue;;
-              width: 113%;
-        }
-        .blog-post{
-            margin-top: -17em;
-            p {
-                margin-left: 1.4em;
-            }
-            p:nth-last-of-type(1) {
-                padding-bottom: 3em;
-                line-height: 1.5em;
-            }
-        }
-        .post-right-shadow {
-            box-shadow: -5px 5px $blue;
-        }
-        h3 {
-            color: white;
-            margin: -3em 0 0 .6em;
-            padding-top: 1em;
-        }
-        
-        .comments {
-            display: grid;
-            grid-template-columns: 1fr 3fr;
-            
-        }
-        img {
-            width: 70%;
-            margin-top: 2em;
-        }
-        .blog-form {
-             position: relative;
-             bottom: 1em;
-             right: 2em;
-             width: 100%;
-             margin-top: 2em ;
-        }
-        .blog-form, #email, #name, #message {
-            background-color: $darkblue;
-            width: 100%;
-        }
-        .submit {
-            background-color: $green;
-            width: 100%;
-            margin-bottom: 0;
-             cursor: pointer;
-             transition: 0.3s;
-              &:hover {
+    h4 {
+      color: white;
+      background-color: $green;
+      padding: 0.3em;
+    }
+    ul {
+      display: flex;
+      flex-direction: column;
+    }
+    li {
+      color: white;
+      font-family: lato;
+      padding: 0;
+      list-style: disc;
+    }
+  }
+  .col-right {
+    flex-basis: 60%;
+    .blog-img-right {
+      position: relative;
+      right: -1.4em;
+      top: -18em;
+    }
+    .blog-left-shadow {
+      box-shadow: -27px 27px $blue;
+      width: 113%;
+    }
+    .blog-post {
+      margin-top: -17em;
+      p {
+        margin-left: 1.4em;
+      }
+      p:nth-last-of-type(1) {
+        padding-bottom: 3em;
+        line-height: 1.5em;
+      }
+    }
+    .post-right-shadow {
+      box-shadow: -5px 5px $blue;
+    }
+    h3 {
+      color: white;
+      margin: -3em 0 0 0.6em;
+      padding-top: 1em;
+    }
+
+    .comments {
+      display: grid;
+      grid-template-columns: 1fr 3fr;
+    }
+    img {
+      width: 70%;
+      margin-top: 2em;
+    }
+    .blog-form {
+      position: relative;
+      bottom: 1em;
+      right: 2em;
+      width: 100%;
+      margin-top: 2em;
+    }
+    .email-name {
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+      gap: 1em;
+      justify-content: space-between;
+      margin: 0;
+    }
+    .blog-form,
+    #email,
+    #name,
+    #message {
+      background-color: $darkblue;
+      width: 100%;
+    }
+    .submit {
+      background-color: $green;
+      width: 100%;
+      margin-bottom: 0;
+      cursor: pointer;
+      transition: 0.3s;
+      &:hover {
         background-color: $blue;
         color: white;
-        }
-        }
-         .email-name-blog {
-
-         width: 100%;
-        gap: 2em;
-         }
+      }
     }
+    .email-name-blog {
+      width: 100%;
+      gap: 2em;
+    }
+  }
 }
 .leave-comment {
-    textarea {
-        width: 100%;
-    }
+  textarea {
+    width: 100%;
+  }
 }
