--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -1,118 +1,111 @@
 .contact-header {
-    background-image: url(../assets/contact-header.jpg);
-    position: relative;
-    height: 60vh;
+  background-image: url(../assets/contact-header.jpg);
+  position: relative;
+  height: 60vh;
 }
 .contact-head {
-    h2{
+  h2 {
     display: flex;
     width: 87%;
     flex-direction: row;
-     justify-content: center;
-     padding-top: 2.5em;
-     padding-left: 3em;
-    
-    }
+    justify-content: center;
+    padding-top: 2.5em;
+    padding-left: 3em;
+  }
 }
-.contact-us{
-    display: flex;
-    flex-direction: row;
-    .info {
-         display: flex;
-         flex-direction: column;
-         justify-content: flex-end;
-         padding-bottom: 10em;
-    }
-    h4 {
-        color: white;
-        margin: 1em 0;
-    }
-    p {
-        margin: 0 ;
-    }
-    i {
-        font-size: 1.4em;
-        margin-right: .5em;
-         cursor: pointer;
-    &:hover {
-    color: $blue;
-    }
-    &:focus {
-    color: $blue;
-    }
-    }
-}
-.contactForm { 
+.contact-us {
+  display: flex;
+  flex-direction: row;
+  .info {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    position: relative;
-    background-color: $green;
-    bottom: 11em;
-    right: -10em;
-    margin: 0 2em;
-    .positioning{
+    justify-content: flex-end;
+    padding-bottom: 10em;
+  }
+  h4 {
+    color: white;
+    margin: 1em 0;
+  }
+  p {
+    margin: 0;
+  }
+  i {
+    font-size: 1.4em;
+    margin-right: 0.5em;
+    cursor: pointer;
+    &:hover {
+      color: $blue;
+    }
+    &:focus {
+      color: $blue;
+    }
+  }
+}
+.contactForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  background-color: $green;
+  bottom: 11em;
+  right: -10em;
+  margin: 0 2em;
+  .positioning {
     top: -250px;
     right: -240px;
-    }
-    .email-name {
-     display: flex;
+  }
+  .email-name {
+    display: flex;
     flex-direction: row;
     width: 90%;
     gap: 1em;
     justify-content: space-between;
-    margin: 0 auto;
-        }
-   #name, #email {
-       border: none;
-   }
-  .form-name, .form-email {
-      width: 100%;
-     border: none;
-       line-height: 3em;
-       border-bottom: 3px solid $blue;
-        margin: 3em auto;
-    }
-    .submit {
-        width: 90%;
-        background-color: $darkblue;
-        color: white;
-        cursor: pointer;
-        transition: 0.3s;
-    &:hover 
-    {
-        background-color: $blue;
-    }
-    &:focus 
-    {
-        background-color: $blue;
-    }
-       
-    }
- input,
-textarea {
-  border: none;
-  margin-bottom: 1em;
-  background-color: $green;
-  color: white;
-  width: 90%;
-  font-family: lato;
-  border: 1px solid $blue;
-  &::placeholder {
-    font-size: 0.8rem;
-    opacity: 1;
+    margin: 0;
+  }
+  #name,
+  #email {
+    border: none;
+    width: 100%;
+  }
+  .form-name,
+  .form-email {
+    width: 100%;
+    border: none;
+    line-height: 3em;
+    border-bottom: 3px solid $blue;
+    margin: 3em auto;
+  }
+  .submit {
+    width: 90%;
+    background-color: $darkblue;
     color: white;
-    line-height: 1.2rem;
-    font-family: 'Lato', sans-serif;
-    text-transform: uppercase;
-      }
+    cursor: pointer;
+    transition: 0.3s;
+    &:hover {
+      background-color: $blue;
     }
+    &:focus {
+      background-color: $blue;
+    }
+  }
+  input,
+  textarea {
+    border: none;
+    margin-bottom: 1em;
+    background-color: $green;
+    color: white;
+    width: 90%;
+    font-family: lato;
+    border: 1px solid $blue;
+    &::placeholder {
+      font-size: 0.8rem;
+      opacity: 1;
+      color: white;
+      line-height: 1.2rem;
+      font-family: "Lato", sans-serif;
+      text-transform: uppercase;
+    }
+  }
 }
-
-
-
- 
-
-    
