--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,7 +20,7 @@ body {
 body {
   max-width: 1500px;
   margin: 0 auto;
-  background-color: #0f614e;
+  background-color: #0c1423;
 }
 
 .wrapper {
@@ -466,7 +466,7 @@ i {
 
 .contact-us i {
   font-size: 1.4em;
-  margin-right: .5em;
+  margin-right: 0.5em;
   cursor: pointer;
 }
 
@@ -516,14 +516,17 @@ i {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin: 0 auto;
+  margin: 0;
 }
 
-.contactForm #name, .contactForm #email {
+.contactForm #name,
+.contactForm #email {
   border: none;
+  width: 100%;
 }
 
-.contactForm .form-name, .contactForm .form-email {
+.contactForm .form-name,
+.contactForm .form-email {
   width: 100%;
   border: none;
   line-height: 3em;
@@ -565,7 +568,7 @@ i {
   opacity: 1;
   color: white;
   line-height: 1.2rem;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   text-transform: uppercase;
 }
 
@@ -575,7 +578,7 @@ i {
   opacity: 1;
   color: white;
   line-height: 1.2rem;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   text-transform: uppercase;
 }
 
@@ -585,7 +588,7 @@ i {
   opacity: 1;
   color: white;
   line-height: 1.2rem;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   text-transform: uppercase;
 }
 
@@ -595,7 +598,7 @@ i {
   opacity: 1;
   color: white;
   line-height: 1.2rem;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   text-transform: uppercase;
 }
 
@@ -633,7 +636,7 @@ i {
   margin-top: 3em;
   position: relative;
   left: -7.5em;
-  top: .3em;
+  top: 0.3em;
 }
 
 .two-col .blog-right-shadow {
@@ -653,13 +656,13 @@ i {
 }
 
 .two-col .col-left .blog-text p {
-  margin: .5em 0;
+  margin: 0.5em 0;
 }
 
 .two-col .col-left h4 {
   color: white;
   background-color: #0f614e;
-  padding: .3em;
+  padding: 0.3em;
 }
 
 .two-col .col-left ul {
@@ -716,7 +719,7 @@ i {
 
 .two-col .col-right h3 {
   color: white;
-  margin: -3em 0 0 .6em;
+  margin: -3em 0 0 0.6em;
   padding-top: 1em;
 }
 
@@ -740,7 +743,26 @@ i {
   margin-top: 2em;
 }
 
-.two-col .col-right .blog-form, .two-col .col-right #email, .two-col .col-right #name, .two-col .col-right #message {
+.two-col .col-right .email-name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 100%;
+  gap: 1em;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0;
+}
+
+.two-col .col-right .blog-form,
+.two-col .col-right #email,
+.two-col .col-right #name,
+.two-col .col-right #message {
   background-color: #0c1423;
   width: 100%;
 }
