--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -1,7 +1,7 @@
 .contact-header {
   background-image: url(../assets/contact-header.jpg);
   position: relative;
-  height: 60vh;
+  height: 550px;
 }
 .contact-head {
   h2 {
