added JS for functionality

--- a/styles/sass/partials/_mediaqueries.scss
+++ b/styles/sass/partials/_mediaqueries.scss
@@ -211,7 +211,7 @@
     nav ul li {
       padding: 1.3em;
     }
-    nav .show {
+    nav .nav-menu.show {
       transform: translateX(-20px);
     }
   }
