--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -75,13 +75,14 @@
     .post-right-shadow {
       box-shadow: -5px 5px $blue;
     }
-    h3 {
+    h4 {
       color: white;
-      margin: -3em 0 0 0.6em;
+      margin: 1em 0 0 0.6em;
       padding-top: 1em;
     }
 
-    .comments {
+    .comments,
+    .new-comments {
       display: grid;
       grid-template-columns: 1fr 3fr;
     }
