--- a/styles/sass/partials/_mediaqueries.scss
+++ b/styles/sass/partials/_mediaqueries.scss
@@ -252,6 +252,7 @@
     width: 80%;
     margin: 0 auto;
   }
+
   .more-blog {
     .this-months-text {
       width: 100%;
@@ -286,6 +287,38 @@
     font-size: 25px;
   }
 }
+
+// @media (max-width: 420px) {
+//   .gallery {
+//     position: relative;
+//     height: 300px;
+//     button {
+//       display: block;
+//       background-color: transparent;
+//       position: relative;
+//     }
+//     .fa-chevron-right {
+//       position: absolute;
+//     }
+//     .carousel {
+//       display: flex;
+//       flex-direction: row;
+//     }
+//     .img-car {
+//       position: relative;
+//       display: flex;
+//       width: 100%;
+//     }
+//     .car-slide {
+//       display: flex;
+//       justify-content: center;
+//       width: 300px;
+//       position: absolute;
+//       top: 0;
+//       left: 0;
+//     }
+//   }
+// }
 @media (max-width: 320px) {
   .more-blog {
     .img-left-position,
