--- a/styles/styles.css
+++ b/styles/styles.css
@@ -569,7 +569,7 @@ i {
   position: relative;
   background-color: #0f614e;
   bottom: 11em;
-  right: -10em;
+  right: -4em;
   margin: 0 2em;
 }
 
@@ -696,6 +696,11 @@ i {
       -ms-flex-pack: center;
           justify-content: center;
   padding-top: 1.5em;
+}
+
+.blog-post h3 {
+  color: white;
+  margin-left: .8em;
 }
 
 .two-col {
@@ -866,6 +871,34 @@ i {
   width: 100%;
 }
 
+@media (max-width: 1400px) {
+  .blog-head h2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-top: 1.5em;
+  }
+  .two-col .blog-right-shadow {
+    display: none;
+  }
+}
+
+@media (max-width: 1342px) {
+  .contactForm {
+    bottom: 11em;
+    right: -8em;
+    margin: 0 2em;
+  }
+}
+
 @media (max-width: 1330px) {
   .more-blog .small-fish {
     width: 100%;
@@ -891,10 +924,71 @@ i {
   }
 }
 
+@media (max-width: 1240px) {
+  .blog-head h2 {
+    margin-left: 0;
+  }
+}
+
 @media (max-width: 1225px) {
   .blog-section .left-shadow {
     -webkit-box-shadow: -25px 25px #86e0f9;
             box-shadow: -25px 25px #86e0f9;
+  }
+  .blog-head h2 {
+    font-size: 80px;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 1225px) {
+  .contact-header {
+    height: 40vh;
+  }
+  .left-shadow {
+    -webkit-box-shadow: -25px 25px #86e0f9;
+            box-shadow: -25px 25px #86e0f9;
+  }
+  .contact-head h2 {
+    width: 100%;
+    padding-left: 0em;
+    font-size: 60px;
+  }
+  .contactForm {
+    position: static;
+    margin: 1em auto 0;
+    background-color: #0f614e;
+  }
+  .contactForm .submit {
+    margin-bottom: 1em;
+  }
+  .contact-us {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    padding: 2em 0;
+    margin-left: 3em;
+  }
+  .contact-us .info {
+    margin-top: 4em;
+    padding-bottom: 0;
+  }
+  .contact-us {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 0 auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
   }
 }
 
@@ -1027,6 +1121,59 @@ i {
 }
 
 @media (max-width: 900px) {
+  .blog-header {
+    height: 40vh;
+  }
+  .two-col {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    padding-bottom: 2em;
+    width: 100%;
+  }
+  .two-col .col-left {
+    width: 100%;
+  }
+  .two-col .col-left .blog-text {
+    padding: 3em 0 0 1em;
+    background-color: #0f614e;
+    width: 90%;
+    margin: 0 auto;
+  }
+  .two-col .col-left .blog-text p {
+    margin: 0.5em 0;
+  }
+  .two-col .col-left .blog-text h4 {
+    padding: 0;
+  }
+  .two-col .col-right {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .two-col .col-right .blog-img-right {
+    position: static;
+  }
+  .two-col .col-right .blog-left-shadow {
+    -webkit-box-shadow: 0px 0px #86e0f9;
+            box-shadow: 0px 0px #86e0f9;
+  }
+  .two-col .col-right .post-right-shadow {
+    margin-top: 10em;
+  }
+  .two-col .col-right .post-right-shadow p:nth-last-of-type(1) {
+    padding-bottom: 3em;
+    line-height: 1.5em;
+  }
+  .two-col .col-right .leave-comment {
+    width: 100%;
+  }
+  .two-col .col-right .blog-form {
+    position: static;
+  }
   .more-blog .this-months-text {
     width: 170%;
   }
@@ -1200,85 +1347,9 @@ i {
     margin: 0.3em 0 0 0.3em;
     font-size: 25px;
   }
-}
-
-@media (max-width: 320px) {
-  .more-blog .img-left-position,
-  .more-blog .img-right-position {
-    position: static;
-    margin: 0.5em auto 0;
-  }
-  .links-section .links {
-    width: 100%;
-  }
-  .links-section .links p {
-    width: 80%;
-    margin-left: 4em;
-  }
-  .img-left {
-    display: none !important;
-  }
-  .this-months-text h3 {
-    padding-top: 1em;
-  }
-}
-
-@media (max-width: 1342px) {
-  .contactForm {
-    bottom: 11em;
-    right: -8em;
-    margin: 0 2em;
-  }
-}
-
-@media (max-width: 1225px) {
-  .contact-header {
-    height: 40vh;
-  }
-  .left-shadow {
-    -webkit-box-shadow: -25px 25px #86e0f9;
-            box-shadow: -25px 25px #86e0f9;
-  }
-  .contact-head h2 {
-    width: 100%;
-    padding-left: 0em;
-    font-size: 60px;
-  }
-  .contactForm {
-    position: static;
-    margin: 1em auto 0;
-    background-color: #0f614e;
-  }
-  .contactForm .submit {
-    margin-bottom: 1em;
-  }
-  .contact-us {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    padding: 2em 0;
-    margin-left: 3em;
-  }
-  .contact-us .info {
-    margin-top: 4em;
-    padding-bottom: 0;
-  }
-  .contact-us {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    margin: 0 auto;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
+  .blog-head h2 {
+    padding-top: 1.5em;
+    margin-top: 0;
   }
 }
 
@@ -1317,105 +1388,6 @@ i {
   .contact-form .form-email {
     margin: 1em 0;
   }
-}
-
-@media (max-width: 1400px) {
-  .blog-head h2 {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    padding-top: 1.5em;
-  }
-  .two-col .blog-right-shadow {
-    display: none;
-  }
-}
-
-@media (max-width: 1240px) {
-  .blog-head h2 {
-    margin-left: 0;
-  }
-}
-
-@media (max-width: 1225px) {
-  .blog-head h2 {
-    font-size: 80px;
-    margin: 0 auto;
-  }
-}
-
-@media (max-width: 900px) {
-  .blog-header {
-    height: 40vh;
-  }
-  .two-col {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
-    padding-bottom: 2em;
-    width: 100%;
-  }
-  .two-col .col-left {
-    width: 100%;
-  }
-  .two-col .col-left .blog-text {
-    padding: 3em 0 0 1em;
-    background-color: #0f614e;
-    width: 90%;
-    margin: 0 auto;
-  }
-  .two-col .col-left .blog-text p {
-    margin: 0.5em 0;
-  }
-  .two-col .col-left .blog-text h4 {
-    padding: 0;
-  }
-  .two-col .col-right {
-    width: 90%;
-    margin: 0 auto;
-  }
-  .two-col .col-right .blog-img-right {
-    position: static;
-  }
-  .two-col .col-right .blog-left-shadow {
-    -webkit-box-shadow: 0px 0px #86e0f9;
-            box-shadow: 0px 0px #86e0f9;
-  }
-  .two-col .col-right .post-right-shadow {
-    margin-top: 10em;
-  }
-  .two-col .col-right .post-right-shadow p:nth-last-of-type(1) {
-    padding-bottom: 3em;
-    line-height: 1.5em;
-  }
-  .two-col .col-right .leave-comment {
-    width: 100%;
-  }
-  .two-col .col-right .blog-form {
-    position: static;
-  }
-}
-
-@media (max-width: 650px) {
-  .blog-head h2 {
-    padding-top: 1.5em;
-    margin-top: 0;
-  }
-}
-
-@media (max-width: 400px) {
   .blog-post {
     margin-top: -17em;
   }
@@ -1435,5 +1407,46 @@ i {
   }
   .comments-section img {
     margin-top: 2em;
+  }
+  .blog-post {
+    margin-top: -17em;
+  }
+  .blog-post p {
+    margin-left: 1.4em;
+    font-size: 15px;
+    line-height: 1.5em;
+  }
+  .blog-post p:nth-last-of-type(1) {
+    padding-bottom: 3em;
+    line-height: 1.5em;
+  }
+  .comments-section p {
+    margin-left: 1em;
+    font-size: 15px;
+    line-height: 1.5em;
+  }
+  .comments-section img {
+    margin-top: 2em;
+  }
+}
+
+@media (max-width: 320px) {
+  .more-blog .img-left-position,
+  .more-blog .img-right-position {
+    position: static;
+    margin: 0.5em auto 0;
+  }
+  .links-section .links {
+    width: 100%;
+  }
+  .links-section .links p {
+    width: 80%;
+    margin-left: 4em;
+  }
+  .img-left {
+    display: none !important;
+  }
+  .this-months-text h3 {
+    padding-top: 1em;
   }
 }
