--- a/styles/sass/partials/_mediaqueries.scss
+++ b/styles/sass/partials/_mediaqueries.scss
@@ -338,10 +338,10 @@
       visibility: hidden;
     }
     h1 {
-      width: 100%;
       padding-top: 2em;
       font-size: 50px;
       margin: 0 auto;
+      text-align: center;
     }
     .menu-btn {
       display: block;
@@ -513,32 +513,6 @@
     }
   }
 
-  .blog-post {
-    margin-top: -17em;
-
-    p {
-      margin-left: 1.4em;
-      font-size: 15px;
-      line-height: 1.5em;
-    }
-
-    p:nth-last-of-type(1) {
-      padding-bottom: 3em;
-      line-height: 1.5em;
-    }
-  }
-
-  .comments-section {
-    p {
-      margin-left: 1em;
-      font-size: 15px;
-      line-height: 1.5em;
-    }
-
-    img {
-      margin-top: 2em;
-    }
-  }
 }
 
 @media (max-width: 320px) {
