--- a/styles/sass/partials/_main.scss
+++ b/styles/sass/partials/_main.scss
@@ -150,6 +150,7 @@ i {
     align-items: center;
     justify-content: center;
     width: 100%;
+    padding-left: 0;
   }
   .car-slide {
     display: flex;
